--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,125 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: hsl(216, 12%, 8%);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.card {
+  background-color: hsl(213, 19%, 18%);
+  border-radius: 2rem;
+  width: 25rem;
+  padding: 3rem;
+  display: block;
+  margin: 14rem auto;
+}
+
+.logo {
+  border-radius: 50%;
+  background-color: hsla(216, 12%, 54%, 0.205);
+  padding: 1rem;
+  margin-bottom: 2rem;
+}
+
+.title {
+  color: #fff;
+  margin-bottom: 1rem;
+}
+
+.description {
+  color: hsl(217, 12%, 63%);
+  line-height: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.rating {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 3rem;
+}
+
+@media only screen and (max-width: 550px) {
+  .card {
+    width: 75%;
+    padding: 1.5rem;
+  }
+
+  .rating {
+    flex-wrap: wrap;
+  }
+}
+
+.ratings {
+  border-radius: 50%;
+  background-color: hsla(216, 12%, 54%, 0.205);
+  color: hsl(217, 12%, 63%);
+  font-weight: bolder;
+  padding: 1rem 1.3rem;
+  cursor: pointer;
+}
+
+.ratings:hover {
+  background-color: hsl(217, 12%, 63%);
+  color: #fff;
+}
+
+.orange {
+  color: hsl(216, 12%, 8%);
+  background-color: hsl(25, 97%, 53%);
+}
+
+.btn-submit {
+  background-color: hsl(25, 97%, 53%);
+  color: hsl(216, 12%, 8%);
+  font-size: 1.1rem;
+  font-weight: bolder;
+  letter-spacing: 0.1rem;
+  border-radius: 5rem;
+  border: none;
+  width: 100%;
+  padding: 1rem 0rem;
+  cursor: pointer;
+}
+
+.btn-submit:active {
+  background-color: #fff;
+}
+
+.thanks-image {
+  display: block;
+  margin: auto;
+  margin-bottom: 3rem;
+}
+
+.rate {
+  background-color: hsla(216, 12%, 54%, 0.205);
+  color: hsl(25, 97%, 53%);
+  border-radius: 2rem;
+  width: 12rem;
+  display: block;
+  margin: auto;
+  text-align: center;
+  padding: 0.5rem 0rem;
+  margin-bottom: 3rem;
+}
+
+.thanks {
+  color: #fff;
+  font-size: 2.5rem;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.thank-description {
+  color: hsl(217, 12%, 63%);
+  line-height: 1.5rem;
+  text-align: center;
+}
+
+.active {
+  background-color: hsl(25, 97%, 53%);
 }
